# oversea-simulation

./: .dockerignore  .gitignore  Dockerfile  README.md  mypy.ini  pyproject.toml  requirements.txt
oversea/: __init__.py  __main__.py  expeditions.ipynb  read.py
oversea/cli/: cli.py  handlers.py
oversea/cli/builder/: builder.py  handlers.py
oversea/cli/example/inputs/: colony.json  ships.json  starting_fleet.json
oversea/cli/sim_example/inputs/: actions.json  base_income.json  buildings.json  starting_resources.json
oversea/mechanics/battle/: fight.py
oversea/mechanics/battle/test/: conftest.py  test_fight.py  test_hit_threshold.py  test_shoot.py
oversea/mechanics/casino/: games.py  roll.py
oversea/mechanics/city/: resolve_income.py
oversea/mechanics/city/sim/: income.py  safe_get.py
oversea/mechanics/city/test/: test_resolve_income.py
oversea/mechanics/factions/arhant/: buildings.py  colony_data.py  faction.py  fraction.py  magic_technologies.py  ships.py  starting_fleet.py  technologies.py
oversea/mechanics/factions/schemas/: action.py  bank.py  base_resources.py  building.py  colony_data.py  cost.py  faction.py  fleet.py  fraction.py  income.py  ship.py  ship_data.py  technology.py
oversea/mechanics/fractions/arhant/: buildings.py  fraction.py  (+3 more)
oversea/transformers/: __init__.py  describe_sequence.py  expeditions.py  filter_with.py  join_conditionals.py
oversea/transformers/test_transformers/: conftest.py  test_join_conditionals.py
oversea/utils/: __init__.py  utils.py
oversea/utils/test/: test_inclusive_range.py
oversea/visuals/: lists.py  word_cloud.py
overseen/: expeditions.ipynb  read.py
overseen/nlp/: load_nlp.py
overseen/transformers/: expeditions.py
scripts/: install-nlp-model.sh  serialize_spacied_data.py
tests/: conftest.py  filenames.py  test_overseen.py  test_read.py
(+16 files in other folders)
