[tool.poetry]
name = "oversea"
version = "0.1.0"
description = ""
authors = ["michal bargiel <michal5bargiel@gmail.com>"]

[tool.poetry.scripts]
sim = "oversea.cli.cli:app"

[tool.poetry.dependencies]
python = "~3.9"
pandas = "^1.3.0"
jupyterlab = "^3.0.16"
toolz = "^0.11.1"
spacy = "^3.1.0"
pydantic = "^1.8.2"
plotly = "^5.1.0"
wordcloud = "^1.8.1"
scipy = "^1.7.0"
typer = "^0.3.2"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]
black = {version = "^21.6b0", extras = ["d"]}
mypy = "^0.910"
pytest = "^6.2.4"
pandas-stubs = "^1.1.0"
hypothesis = "^6.14.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
